# chess

./: .classpath  .factorypath  .gitignore  .project  AlphaZeroNeuralNetwork.java.patch  BOOTSTRAP_VALUE_FIX.md  GC_ANALYSIS_REPORT.md  README-MCP.md  README.md  SECURITY.md  STARTUP_AUTOMATION.md  fix.patch  gc.log.0  gc.log.1  gc.log.2  gc.log.3  gc.log.4  pom.xml  regenerate_ai_states.bat  run-modes.bat  spotbugs-include.xml  start-chess-dual-quiet.bat  start-chess-dual-service.bat  start-chess-dual.bat  start-chess-dual.sh  test-all-modes.bat  test-args.bat  test-mcp.bat  test_nio2.bat
.github/: CODEOWNERS
docs/: A3C_ARCHITECTURAL_IMPROVEMENTS.md  AI_ARCHITECTURE_IMPROVEMENTS.md  AI_MCP_CHESS.md  AI_MCP_CHESS_AGENT.md  AI_OPTIMIZATION_COMPARISON_MATRIX.md  AI_TRAINING_VALIDATION.md  AI_UNIT_TEST_CASES.md  ALPHAFOLD3_CONCURRENCY_FIX.md  API.md  ARCHITECT_REVIEW.md  ASYNC_LOADING_COMPLETE.md  ASYNC_LOADING_STATUS.md  ASYNC_SAVE_ALL_FIX.md  AWS_DEPLOYMENT_DESIGN.md  AWS_DEPLOYMENT_DESIGN_REVIEW.md  AWS_DEPLOYMENT_OPTIMIZATION.md  AWS_INFRA_Sequence_Diagram.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_HELM_CHARTS.md  AZURE_MIGRATION_STRATEGY.md  AZURE_TERRAFORM_MODULES.md  AlphaZero-AI.md  CHESS_PROCESS_DECOMPOSITION.md  CHESS_PROJECT_PROMPTS.md  CHESS_REFACTOR_C++.md  CNN-Deep-Learning-AI.md  CNN_CORRUPTION_ANALYSIS.md  CNN_CORRUPTION_FIX_SUMMARY.md  COMMAND-LINE-VERIFICATION.md  CURSOR_UI_REFACTOR.md  CURSOR_UI_SEQUENCE.md  ChessGame_Sequence_Diagram.md  DB2_MIGRATION_ENHANCED.md  (+34 more)
wireshark/: CMakeLists.txt  README.md  install_plugin.bat  mcp_dissector.c  mcp_dissector.lua
(+281 files in other folders)
